- added missing ids and changed button type

--- a/WDP Project Final/main2.html
+++ b/WDP Project Final/main2.html
@@ -148,8 +148,8 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <input type="submit" name="saveContact" value="speichern" class="btn btn-default"/>
-                        <input type="submit" name="deleteContact" value="löschen" class="btn btn-default"/>
+                        <input type="submit" id="saveContact" name="saveContact" value="speichern" class="btn btn-default"/>
+                        <input type="button" id="deleteContact" name="deleteContact" value="löschen" class="btn btn-default"/>
                     </div>
 
                 </form>
@@ -181,7 +181,7 @@
 
                         <div class="col-sm-8">
                             <input type="text" class="form-control" value="" id="notficationNumber"
-                                   name="notificationNumber"/>
+                                   name="notficationNumber"/>
                         </div>
                     </div>
                     <div class="form-group">
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <input id="saveButton" type="button" class="btn btn-default" value="speichern"/>
+                        <input id="saveButton" type="submit" class="btn btn-default" value="speichern"/>
                         <input id="resetButton" type="button" class="btn btn-default" value="löschen"/>
                         <input id="addPositionButton" type="button" class="btn btn-default" value="hinzufügen"/>
                     </div>
